--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1836,6 +1836,9 @@ section,
   background-image: url("../img/portfolio/ph_ev.webp");
  }
 
+ .img5{
+  background-image: url("../img/portfolio/ph_ev.webp");
+ }
 
 }
 
