--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1792,7 +1792,7 @@ section,
 }
 
 
-.img5 {
+.okay {
   background-image: url("../img/portfolio/cables11.webp"); 
   background-size: cover; 
   background-position: center; 
@@ -1836,7 +1836,7 @@ section,
   background-image: url("../img/portfolio/ph_ev.webp");
  }
 
- .img5{
+ .okay{
   background-image: url("../img/portfolio/ph_ev.webp");
  }
 
